--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -115,16 +115,13 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginEnd="12dp"
-                        android:fontFamily="@font/nunito_black"
                         android:gravity="center"
                         android:text="@string/settings_btn_account_verify"
                         android:textAlignment="gravity"
-                        android:textSize="10sp"
                         app:layout_constraintBottom_toBottomOf="@+id/iv_settings_account_email"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintTop_toTopOf="@+id/iv_settings_account_email"
-                        app:layout_constraintVertical_bias="0.5"
-                        tools:ignore="SmallSp" />
+                        app:layout_constraintVertical_bias="0.5" />
 
                     <View
                         android:id="@+id/divider_settings_account_first"
@@ -508,9 +505,7 @@
                 android:layout_marginHorizontal="8dp"
                 android:layout_marginTop="24dp"
                 android:layout_marginBottom="80dp"
-                android:fontFamily="@font/nunito_bold"
                 android:text="@string/settings_btn_logout"
-                android:textSize="16sp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
