--- a/app/src/main/res/menu/menu_warranty_details.xml
+++ b/app/src/main/res/menu/menu_warranty_details.xml
@@ -4,8 +4,8 @@
 
     <item
         android:id="@+id/action_menu_add"
-        android:icon="@drawable/ic_menu_remove"
-        android:title="@string/warranty_details_menu_title_remove"
+        android:icon="@drawable/ic_menu_delete"
+        android:title="@string/warranty_details_menu_title_delete"
         app:showAsAction="always" />
 
 </menu>
