--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -123,6 +123,18 @@
                         app:layout_constraintTop_toTopOf="@+id/iv_settings_account_email"
                         app:layout_constraintVertical_bias="0.5" />
 
+                    <com.google.android.material.progressindicator.LinearProgressIndicator
+                        android:id="@+id/lpi_settings_account_email"
+                        style="@style/Theme.WarrantyRoster.LoadingProgressBar.Linear"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:visibility="gone"
+                        app:indicatorDirectionLinear="startToEnd"
+                        app:layout_constraintBottom_toTopOf="@+id/divider_settings_account_first"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toTopOf="parent" />
+
                     <View
                         android:id="@+id/divider_settings_account_first"
                         android:layout_width="0dp"
@@ -253,6 +265,13 @@
                             app:layout_constraintVertical_bias="0.5" />
 
                     </androidx.constraintlayout.widget.ConstraintLayout>
+
+                    <androidx.constraintlayout.widget.Group
+                        android:id="@+id/group_settings_account"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:visibility="gone"
+                        app:constraint_referenced_ids="iv_settings_account_email,lav_settings_account_email,tv_settings_account_email,btn_settings_account_email,divider_settings_account_first" />
 
                 </androidx.constraintlayout.widget.ConstraintLayout>
 
