--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -128,11 +128,13 @@
                         style="@style/Theme.WarrantyRoster.LoadingProgressBar.Button"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:layout_marginEnd="12dp"
                         android:visibility="gone"
-                        app:layout_constraintBottom_toBottomOf="@+id/btn_settings_account_email"
-                        app:layout_constraintEnd_toEndOf="@+id/btn_settings_account_email"
-                        app:layout_constraintStart_toStartOf="@+id/btn_settings_account_email"
-                        app:layout_constraintTop_toTopOf="@+id/btn_settings_account_email" />
+                        app:layout_constraintBottom_toBottomOf="@+id/iv_settings_account_email"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintHorizontal_bias="0.5"
+                        app:layout_constraintTop_toTopOf="@+id/iv_settings_account_email"
+                        app:layout_constraintVertical_bias="0.5" />
 
                     <com.google.android.material.progressindicator.LinearProgressIndicator
                         android:id="@+id/lpi_settings_account_email"
