--- a/app/src/main/res/layout/list_warranty.xml
+++ b/app/src/main/res/layout/list_warranty.xml
@@ -90,6 +90,7 @@
             app:layout_constraintEnd_toStartOf="@+id/fl_list_warranty_status"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_chainStyle="packed"
+            app:textAllCaps="true"
             tools:ignore="SmallSp" />
 
         <FrameLayout
