--- a/app/src/main/res/layout/fragment_forgot_pw_sent.xml
+++ b/app/src/main/res/layout/fragment_forgot_pw_sent.xml
@@ -74,6 +74,18 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/tv_forgot_pw_sent_resend" />
 
+        <com.google.android.material.progressindicator.CircularProgressIndicator
+            android:id="@+id/cpi_forgot_pw_sent"
+            style="@style/Theme.WarrantyRoster.LoadingProgressBar.Button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="4dp"
+            android:layout_marginTop="0dp"
+            android:visibility="gone"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/tv_forgot_pw_sent_resend" />
+
         <com.google.android.material.textview.MaterialTextView
             android:id="@+id/tv_forgot_pw_sent_resent"
             android:layout_width="0dp"
