--- a/app/src/main/res/layout/ad_banner_settings.xml
+++ b/app/src/main/res/layout/ad_banner_settings.xml
@@ -73,7 +73,7 @@
             android:layout_height="wrap_content"
             android:layout_marginEnd="12dp"
             android:background="@drawable/shape_rounded_status"
-            android:backgroundTint="@color/blue20"
+            android:backgroundTint="@color/navyBlue20"
             android:ellipsize="end"
             android:fontFamily="@font/nunito_black"
             android:gravity="center"
@@ -83,7 +83,7 @@
             android:text="@string/warranties_list_ad_indicator"
             android:textAlignment="gravity"
             android:textAllCaps="true"
-            android:textColor="@color/blue"
+            android:textColor="@color/navyBlue"
             android:textSize="10sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
