--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -2,6 +2,8 @@
 <resources>
     <color name="background">#101010</color>
     <color name="surface">#191919</color>
+    <color name="statusBar">#191919</color>
+    <color name="statusBarV21">#191919</color>
     <color name="white">#000000</color>
     <color name="black">#FFFFFF</color>
     <color name="navyBlue">#DEF4FD</color>
