--- a/app/src/main/res/navigation/nav_graph_main.xml
+++ b/app/src/main/res/navigation/nav_graph_main.xml
@@ -7,7 +7,7 @@
 
     <fragment
         android:id="@+id/warrantiesFragment"
-        android:name="com.xeniac.warrantyroster.mainactivity.warrantiesfragment.WarrantiesFragment"
+        android:name="com.xeniac.warrantyrostermanager.mainactivity.warrantiesfragment.WarrantiesFragment"
         android:label="WarrantiesFragment"
         tools:layout="@layout/fragment_warranties">
         <action
@@ -21,7 +21,7 @@
 
     <fragment
         android:id="@+id/settingsFragment"
-        android:name="com.xeniac.warrantyroster.mainactivity.setingsfragment.SettingsFragment"
+        android:name="com.xeniac.warrantyrostermanager.mainactivity.setingsfragment.SettingsFragment"
         android:label="SettingsFragment"
         tools:layout="@layout/fragment_settings">
         <action
@@ -42,7 +42,7 @@
 
     <fragment
         android:id="@+id/addWarrantyFragment"
-        android:name="com.xeniac.warrantyroster.mainactivity.addwarrantyfragment.AddWarrantyFragment"
+        android:name="com.xeniac.warrantyrostermanager.mainactivity.addwarrantyfragment.AddWarrantyFragment"
         android:label="AddWarrantyFragment"
         tools:layout="@layout/fragment_add_warranty">
         <action
@@ -66,12 +66,12 @@
 
     <fragment
         android:id="@+id/warrantyDetailsFragment"
-        android:name="com.xeniac.warrantyroster.mainactivity.warrantydetailsfragment.WarrantyDetailsFragment"
+        android:name="com.xeniac.warrantyrostermanager.mainactivity.warrantydetailsfragment.WarrantyDetailsFragment"
         android:label="WarrantyDetailsFragment"
         tools:layout="@layout/fragment_warranty_details">
         <argument
             android:name="warranty"
-            app:argType="com.xeniac.warrantyroster.mainactivity.warrantiesfragment.WarrantyDataModel"
+            app:argType="com.xeniac.warrantyrostermanager.mainactivity.warrantiesfragment.WarrantyDataModel"
             app:nullable="false" />
         <argument
             android:name="daysUntilExpiry"
@@ -88,12 +88,12 @@
 
     <fragment
         android:id="@+id/editWarrantyFragment"
-        android:name="com.xeniac.warrantyroster.mainactivity.editwarrantyfragment.EditWarrantyFragment"
+        android:name="com.xeniac.warrantyrostermanager.mainactivity.editwarrantyfragment.EditWarrantyFragment"
         android:label="EditWarrantyFragment"
         tools:layout="@layout/fragment_edit_warranty">
         <argument
             android:name="warranty"
-            app:argType="com.xeniac.warrantyroster.mainactivity.warrantiesfragment.WarrantyDataModel"
+            app:argType="com.xeniac.warrantyrostermanager.mainactivity.warrantiesfragment.WarrantyDataModel"
             app:nullable="false" />
         <action
             android:id="@+id/action_editWarrantyFragment_to_warrantyDetailsFragment"
@@ -107,7 +107,7 @@
 
     <fragment
         android:id="@+id/changeEmailFragment"
-        android:name="com.xeniac.warrantyroster.mainactivity.changeemailfragment.ChangeEmailFragment"
+        android:name="com.xeniac.warrantyrostermanager.mainactivity.changeemailfragment.ChangeEmailFragment"
         android:label="ChangeEmailFragment"
         tools:layout="@layout/fragment_change_email">
         <argument
@@ -118,7 +118,7 @@
 
     <fragment
         android:id="@+id/changePasswordFragment"
-        android:name="com.xeniac.warrantyroster.mainactivity.changepasswordfragment.ChangePasswordFragment"
+        android:name="com.xeniac.warrantyrostermanager.mainactivity.changepasswordfragment.ChangePasswordFragment"
         android:label="ChangePasswordFragment"
         tools:layout="@layout/fragment_change_password" />
 
