--- a/app/src/main/res/layout/fragment_register.xml
+++ b/app/src/main/res/layout/fragment_register.xml
@@ -170,16 +170,34 @@
         </com.google.android.material.textfield.TextInputLayout>
 
         <com.google.android.material.button.MaterialButton
+            android:id="@+id/btn_register_agreement"
+            style="@style/Theme.WarrantyRoster.TextButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="27dp"
+            android:layout_marginTop="3dp"
+            android:clickable="true"
+            android:focusable="true"
+            android:fontFamily="@font/nunito_light"
+            android:gravity="center"
+            android:text="@string/register_text_agreement"
+            android:textAlignment="gravity"
+            android:textColor="@color/grayDark"
+            android:textSize="12sp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/ti_register_layout_retype_password" />
+
+        <com.google.android.material.button.MaterialButton
             android:id="@+id/btn_register_register"
             style="@style/Theme.WarrantyRoster.Button"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="24dp"
-            android:layout_marginTop="40dp"
+            android:layout_marginTop="35dp"
             android:text="@string/register_btn_register"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/ti_register_layout_retype_password" />
+            app:layout_constraintTop_toBottomOf="@+id/btn_register_agreement" />
 
         <com.google.android.material.progressindicator.CircularProgressIndicator
             android:id="@+id/cpi_register"
