--- a/app/src/main/res/navigation/nav_graph_main.xml
+++ b/app/src/main/res/navigation/nav_graph_main.xml
@@ -71,7 +71,7 @@
         tools:layout="@layout/fragment_warranty_details">
         <argument
             android:name="warranty"
-            app:argType="com.xeniac.warrantyrostermanager.mainactivity.warrantiesfragment.WarrantyDataModel"
+            app:argType="com.xeniac.warrantyrostermanager.model.Warranty"
             app:nullable="false" />
         <argument
             android:name="daysUntilExpiry"
@@ -93,7 +93,7 @@
         tools:layout="@layout/fragment_edit_warranty">
         <argument
             android:name="warranty"
-            app:argType="com.xeniac.warrantyrostermanager.mainactivity.warrantiesfragment.WarrantyDataModel"
+            app:argType="com.xeniac.warrantyrostermanager.model.Warranty"
             app:nullable="false" />
         <action
             android:id="@+id/action_editWarrantyFragment_to_warrantyDetailsFragment"
