Migrate Change Email Fragment to Kotlin and Firebase

--- a/app/src/main/res/layout/fragment_change_email.xml
+++ b/app/src/main/res/layout/fragment_change_email.xml
@@ -46,16 +46,16 @@
                 app:lottie_rawRes="@raw/anim_keyboard" />
 
             <com.google.android.material.textview.MaterialTextView
-                android:id="@+id/tv_change_email_title_email"
+                android:id="@+id/tv_change_email_title_current_email"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="32dp"
                 android:layout_marginTop="8dp"
                 android:fontFamily="@font/nunito_bold"
                 android:gravity="start|center_vertical"
-                android:labelFor="@+id/ti_change_email_layout_email"
+                android:labelFor="@+id/ti_change_email_layout_current_email"
                 android:maxLines="1"
-                android:text="@string/change_email_title_email"
+                android:text="@string/change_email_title_current_email"
                 android:textAlignment="gravity"
                 android:textColor="@color/black"
                 android:textSize="14sp"
@@ -64,7 +64,7 @@
                 app:layout_constraintTop_toBottomOf="@+id/lav_change_email" />
 
             <com.google.android.material.textfield.TextInputLayout
-                android:id="@+id/ti_change_email_layout_email"
+                android:id="@+id/ti_change_email_layout_current_email"
                 style="@style/Theme.WarrantyRoster.TextInputLayout"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
@@ -72,15 +72,108 @@
                 android:layout_marginTop="4dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/tv_change_email_title_email">
+                app:layout_constraintTop_toBottomOf="@+id/tv_change_email_title_current_email">
 
                 <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/ti_change_email_edit_email"
+                    android:id="@+id/ti_change_email_edit_current_email"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:fontFamily="@font/nunito_regular"
                     android:gravity="center_vertical"
-                    android:hint="@string/change_email_hint_email"
+                    android:hint="@string/change_email_hint_current_email"
+                    android:imeOptions="actionNext"
+                    android:inputType="textEmailAddress"
+                    android:maxLines="1"
+                    android:textColor="@color/black"
+                    android:textColorHint="@color/grayDark"
+                    android:textDirection="ltr"
+                    android:textSize="16sp" />
+
+            </com.google.android.material.textfield.TextInputLayout>
+
+            <com.google.android.material.textview.MaterialTextView
+                android:id="@+id/tv_change_email_title_password"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginHorizontal="32dp"
+                android:layout_marginTop="16dp"
+                android:fontFamily="@font/nunito_bold"
+                android:gravity="start|center_vertical"
+                android:labelFor="@+id/ti_change_email_layout_password"
+                android:maxLines="1"
+                android:text="@string/change_email_title_password"
+                android:textAlignment="gravity"
+                android:textColor="@color/black"
+                android:textSize="14sp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/ti_change_email_layout_current_email" />
+
+            <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/ti_change_email_layout_password"
+                style="@style/Theme.WarrantyRoster.TextInputLayout"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginHorizontal="24dp"
+                android:layout_marginTop="4dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/tv_change_email_title_password"
+                app:passwordToggleEnabled="true">
+
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/ti_change_email_edit_password"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="@font/nunito_regular"
+                    android:gravity="center_vertical"
+                    android:hint="@string/change_email_hint_password"
+                    android:imeOptions="actionNext"
+                    android:inputType="textPassword"
+                    android:maxLines="1"
+                    android:textColor="@color/black"
+                    android:textColorHint="@color/grayDark"
+                    android:textDirection="ltr"
+                    android:textSize="16sp" />
+
+            </com.google.android.material.textfield.TextInputLayout>
+
+            <com.google.android.material.textview.MaterialTextView
+                android:id="@+id/tv_change_email_title_new_email"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginHorizontal="32dp"
+                android:layout_marginTop="8dp"
+                android:fontFamily="@font/nunito_bold"
+                android:gravity="start|center_vertical"
+                android:labelFor="@+id/ti_change_email_layout_new_email"
+                android:maxLines="1"
+                android:text="@string/change_email_title_new_email"
+                android:textAlignment="gravity"
+                android:textColor="@color/black"
+                android:textSize="14sp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/ti_change_email_layout_password" />
+
+            <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/ti_change_email_layout_new_email"
+                style="@style/Theme.WarrantyRoster.TextInputLayout"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginHorizontal="24dp"
+                android:layout_marginTop="4dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/tv_change_email_title_new_email">
+
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/ti_change_email_edit_new_email"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="@font/nunito_regular"
+                    android:gravity="center_vertical"
+                    android:hint="@string/change_email_hint_new_email"
                     android:imeOptions="actionDone"
                     android:inputType="textEmailAddress"
                     android:maxLines="1"
@@ -103,7 +196,7 @@
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/ti_change_email_layout_email" />
+                app:layout_constraintTop_toBottomOf="@+id/ti_change_email_layout_new_email" />
 
             <com.google.android.material.progressindicator.CircularProgressIndicator
                 android:id="@+id/cpi_change_email"
